[gd_scene load_steps=2 format=3 uid="uid://jyonekm7ar5s"]

[ext_resource type="Script" path="res://ui/menus/tavern/storage.gd" id="1_ku1l4"]

[node name="Storage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ku1l4")

[node name="StoragePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -17.5
offset_right = 18.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StoragePanel"]
layout_mode = 2

[node name="IngredientList" type="VBoxContainer" parent="StoragePanel/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="StoragePanel/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="IngredientPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="IngredientPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="IngredientPanel/MarginContainer"]
layout_mode = 2

[node name="IngredientName" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ingredient
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="IngredientPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="ProcessContainer" type="HBoxContainer" parent="IngredientPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/ProcessContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Processing Methods: "

[node name="ProcessList" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/ProcessContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CostContainer" type="HBoxContainer" parent="IngredientPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/CostContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cost:"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/CostContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FameContainer" type="HBoxContainer" parent="IngredientPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/FameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fame:"
horizontal_alignment = 1

[node name="FameLabel" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/FameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="IngredientPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Description:"
horizontal_alignment = 1

[node name="Description" type="Label" parent="IngredientPanel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
autowrap_mode = 2
